@@ -1,5 +1,8 @@
 2010-06-16 S. Thiell <stephane.thiell@cea.fr>
 
+	* scripts/clush.py: Check for trailing args when using -c/--copy (trac
+	ticket #88).
+
 	* NodeSet.py, NodeUtils.py: Add a way to retrieve all nodes when "all"
 	external call is missing but "map" and "list" calls are specified (trac
 	ticket #90).
